<resources>
    <string name="app_name">Github User</string>
    <string name="github_octocat_logo">Github Octocat Logo</string>
    <string name="developed_by">Developed By\nErik Rio Setiawan</string>
    <string name="user_avatar">User Avatar</string>
    <string name="share_button">Share Button</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="share_message">View %1$s Github Profile Pages at : %2$s</string>
    <string name="search">Search</string>
    <string name="query_hint">Type a Github user keyword</string>
    <string name="no_data">No Data</string>

    <string-array name="username">
        <item>erikrios</item>
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
        <item>nrohmen</item>
        <item>rizqiaryansa</item>
        <item>arifaizin</item>
        <item>gilangadhan</item>
        <item>alfianhidayat</item>
        <item>Najibsaurus</item>
        <item>arfirman1402</item>
        <item>alfianyusufabdullah</item>
        <item>dimasmds</item>
        <item>ariya</item>
        <item>endymuhardin</item>
    </string-array>

    <string-array name="name">
        <item>Erik Rio Setiawan</item>
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
        <item>Nur Rohman</item>
        <item>Rizqi Aryansa</item>
        <item>Ahmad Arif Faizin</item>
        <item>Gilang Ramadhan</item>
        <item>Alfian Hidayat</item>
        <item>Najib Abdillah</item>
        <item>Ar Firman Syahputra</item>
        <item>Alfian Yusuf Abdullah</item>
        <item>Dimas Maulana Dwi Saputra</item>
        <item>Ariya Hidayat</item>
        <item>Endy Muhardin</item>
    </string-array>

    <string-array name="location">
        <item>Ponorogo, East Java, Indonesia</item>
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>Indonesia</item>
        <item>Semarang, Indonesia</item>
        <item>Semarang, Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>Yogyakarta, Indonesia</item>
        <item>South Jakarta, Jakarta, Indonesia</item>
        <item>Gorontalo, Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>SF Bay Area</item>
        <item>Jakarta, Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>386</item>
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
        <item>55</item>
        <item>30</item>
        <item>131</item>
        <item>52</item>
        <item>31</item>
        <item>120</item>
        <item>17</item>
        <item>106</item>
        <item>56</item>
        <item>47</item>
        <item>158</item>
    </string-array>

    <string-array name="company">
        <item>Universitas Muhammadiyah Ponorogo</item>
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
        <item>Chief Product Officer, Dicoding Indonesia</item>
        <item>Tokopedia</item>
        <item>Dicoding Indonesia</item>
        <item>Academy Content Writer at dicoding.com</item>
        <item>Software Design Engineer at Blibli.com</item>
        <item>External Code Reviewer at Dicoding Indonesia</item>
        <item>Android Developer @ Bukalapak.com</item>
        <item>Reviewer @dicodingacademy</item>
        <item>Curriculum Developer at Dicoding Indonesia</item>
        <item>Software Provocateur</item>
        <item>ArtiVisi Intermedia</item>
    </string-array>

    <string-array name="followers">
        <item>12</item>
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
        <item>302</item>
        <item>25</item>
        <item>106</item>
        <item>147</item>
        <item>130</item>
        <item>46</item>
        <item>111</item>
        <item>190</item>
        <item>78</item>
        <item>3200</item>
        <item>1000</item>
    </string-array>

    <string-array name="following">
        <item>46</item>
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
        <item>9</item>
        <item>26</item>
        <item>16</item>
        <item>3</item>
        <item>5</item>
        <item>48</item>
        <item>185</item>
        <item>36</item>
        <item>40</item>
        <item>0</item>
        <item>13</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
        <item>@drawable/user11</item>
        <item>@drawable/user12</item>
        <item>@drawable/user13</item>
        <item>@drawable/user14</item>
        <item>@drawable/user15</item>
        <item>@drawable/user16</item>
        <item>@drawable/user17</item>
        <item>@drawable/user18</item>
        <item>@drawable/user19</item>
        <item>@drawable/user20</item>
        <item>@drawable/user21</item>
        <item>@drawable/user22</item>
    </string-array>
</resources>