<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_dark_500"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_avatar"
                android:fitsSystemWindows="true"
                android:scaleType="center"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_title" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_company"
                style="@style/TextViewValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:maxLines="3"
                app:layout_constraintEnd_toStartOf="@id/tv_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/tv_company_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/company"
                app:layout_constraintEnd_toEndOf="@id/tv_company"
                app:layout_constraintStart_toStartOf="@id/tv_company"
                app:layout_constraintTop_toBottomOf="@id/tv_company" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextViewValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_company"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/tv_location_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="@id/tv_location"
                app:layout_constraintStart_toStartOf="@id/tv_location"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/TextViewValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:lines="1"
                app:layout_constraintEnd_toEndOf="@id/tv_location_info"
                app:layout_constraintStart_toStartOf="@id/tv_company_info"
                app:layout_constraintTop_toBottomOf="@id/tv_company_info"
                tools:text="@tools:sample/last_names" />

            <TextView
                android:id="@+id/tv_username_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="@id/tv_username"
                app:layout_constraintStart_toStartOf="@id/tv_username"
                app:layout_constraintTop_toBottomOf="@id/tv_username" />

            <TextView
                android:id="@+id/tv_repository"
                style="@style/TextViewValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:lines="1"
                app:layout_constraintEnd_toStartOf="@id/tv_following"
                app:layout_constraintStart_toEndOf="@id/tv_followers"
                app:layout_constraintTop_toBottomOf="@id/tv_username_info"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tv_followers"
                style="@style/TextViewValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:lines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_repository"
                app:layout_constraintEnd_toStartOf="@id/tv_repository"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_repository"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tv_following"
                style="@style/TextViewValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:lines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_repository"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_repository"
                app:layout_constraintTop_toTopOf="@id/tv_repository"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tv_repository_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/repository"
                app:layout_constraintEnd_toEndOf="@id/tv_repository"
                app:layout_constraintStart_toStartOf="@id/tv_repository"
                app:layout_constraintTop_toBottomOf="@id/tv_repository" />

            <TextView
                android:id="@+id/tv_followers_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/followers"
                app:layout_constraintEnd_toEndOf="@id/tv_followers"
                app:layout_constraintStart_toStartOf="@id/tv_followers"
                app:layout_constraintTop_toBottomOf="@id/tv_followers" />

            <TextView
                android:id="@+id/tv_following_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="@id/tv_following"
                app:layout_constraintStart_toStartOf="@id/tv_following"
                app:layout_constraintTop_toBottomOf="@id/tv_following" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_open_in_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/open_in_browser"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/purple_200"
                app:icon="@drawable/ic_baseline_public_24"
                app:iconTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_repository_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/share_button"
        android:src="@drawable/ic_baseline_share_24"
        app:backgroundTint="@color/purple_200"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="20dp"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>